# homework_web_11

./: main.py  pyproject.toml  test.db
postgres-data/: postmaster.pid
postgres-data/base/16384/: 1247  1249  1259  16397  16400  16403  16404  16408  16409  16412  16414  16416  16418  16420  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+7 more)
postgres-data/base/16388/: 113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13411  13411_fsm  13411_vm  13415  174  175  2228  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  (+162 more)
postgres-data/base/16389/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  2187  2228  2337  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  (+183 more)
postgres-data/global/: 1260  1262  2396  2397  2671  2672  pg_control  pg_internal.init
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: schema.py  user.py
src/services/: auth.py  email.py
